--- a/public/bower.json
+++ b/public/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-masonry": "~0.11.0"
+    "angular-masonry": "~0.11.0",
+    "angular-route": "~1.3.0"
   }
 }
